--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Tom Preston-Werner" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
+   <meta name="author" content="Kunal Dargan" />
+   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Kunal Dargan" type="application/atom+xml" />
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
    <!-- syntax highlighting CSS -->
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Tom Preston-Werner</a>
+    <a href="/">Kunal Dargan</a>
     <a class="extra" href="/">home</a>
   </div>
 
@@ -36,7 +36,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        Tom Preston-Werner
+        Kunal Dargan
         <br />
         Cofounder of
           <a href="https://codestarter.org/">Codestarter</a>,
@@ -59,7 +59,6 @@ var WRInitTime=(new Date()).getTime();
   </div>
 </div>
 
-<a href="http://github.com/mojombo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
 
 <!-- ClickTale Bottom part -->
 <div id="ClickTaleDiv" style="display: none;"></div>
